# ferrite-sdk

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
.github/workflows/: ci.yml  docs.yml  qemu.yml  release.yml
demo/: DEMO_RUNBOOK.md  preflight.sh  seed_data.py
deploy/rpi-gateway/: 99-ferrite.rules  cross-build.sh  ferrite-gateway.service  ferrite-server.service  gateway.env  server.env  setup.sh
docker/: entrypoint.sh
docker/keycloak/: ferrite-realm.json
docs/: DEVICE_REGISTRATION_SPEC.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/contributing/: index.md  testing.md
docs/dashboard/: index.md  sso.md
docs/gateway/: index.md
docs/guide/: architecture.md  concepts.md  fleet-examples.md  introduction.md  quickstart.md  security.md  transports.md
docs/integrations/: baremetal.md  embassy.md  freertos-c.md  index.md  rtic.md  zephyr-c.md
docs/reference/: c-api.md  chunk-format.md  config.md  index.md  sdk-api.md
docs/server/: configuration.md  index.md  installation.md  symbolication.md
docs/targets/: index.md  nrf52840.md  rp2040.md  stm32f4.md  stm32l4.md
examples/c-stm32l4a6/: Makefile  STM32L4A6ZGTx_FLASH.ld
examples/c-stm32l4a6/include/: ferrite-sdk.h
examples/c-stm32l4a6/src/: main.c  startup_stm32l4a6xx.s  system_stm32l4xx.c
examples/embassy-esp32c3/: Cargo.toml  build.rs  rust-toolchain.toml
examples/embassy-esp32c3/.cargo/: config.toml
examples/embassy-esp32c3/src/: main.rs
examples/embassy-nrf52840/: Cargo.toml  build.rs  memory.x
examples/embassy-nrf52840/.cargo/: config.toml
examples/embassy-nrf52840/src/: main.rs
examples/embassy-nrf5340/: Cargo.toml  memory.x
examples/embassy-nrf5340/.cargo/: config.toml
examples/embassy-nrf5340/src/: main.rs
examples/embassy-rp2040/: Cargo.toml  memory.x
examples/embassy-rp2040/src/: main.rs
examples/embassy-rp235x/: Cargo.toml  build.rs  memory.x
examples/embassy-rp235x/.cargo/: config.toml
examples/embassy-rp235x/src/: main.rs
examples/embassy-stm32h563/: Cargo.toml  build.rs  memory.x
examples/embassy-stm32h563/.cargo/: config.toml
examples/embassy-stm32h563/src/: main.rs
examples/embassy-stm32l4a6/: Cargo.toml  memory.x
examples/embassy-stm32l4a6/.cargo/: config.toml
examples/embassy-stm32l4a6/src/: main.rs
examples/embassy-stm32wl55/: Cargo.toml  build.rs
examples/embassy-stm32wl55/.cargo/: config.toml
examples/embassy-stm32wl55/src/: main.rs
examples/rtic-stm32f4/: Cargo.toml  build.rs  memory.x
examples/rtic-stm32f4/.cargo/: config.toml
examples/rtic-stm32f4/src/: main.rs
examples/rtic-stm32wl55/: Cargo.toml  build.rs  memory.x
examples/rtic-stm32wl55/.cargo/: config.toml
examples/rtic-stm32wl55/src/: main.rs
examples/zephyr-nrf5340/: CMakeLists.txt  prj.conf
examples/zephyr-nrf5340/boards/: nrf5340dk_nrf5340_cpuapp.overlay
examples/zephyr-nrf5340/src/: main.c
ferrite-ble-nrf/: Cargo.toml
ferrite-ble-nrf/src/: lib.rs
ferrite-cli/: Cargo.toml
ferrite-cli/src/: api.rs  config.rs  main.rs  output.rs
ferrite-cli/src/commands/: devices.rs  faults.rs  groups.rs  metrics.rs  mod.rs  ota.rs
ferrite-dashboard/: Cargo.toml  Dioxus.toml  index.html
ferrite-dashboard/assets/: manifest.json  sw.js
ferrite-dashboard/src/: hooks.rs  lib.rs  main.rs
ferrite-dashboard/src/api/: client.rs  types.rs
ferrite-dashboard/src/auth/: mod.rs  oidc.rs  state.rs
ferrite-dashboard/src/components/: device_card.rs  export.rs  fault_viewer.rs  loading.rs  metric_chart.rs  mod.rs  navbar.rs  trace_viewer.rs
ferrite-dashboard/src/pages/: callback.rs  campaign_detail.rs  campaign_new.rs  compare.rs  crashes.rs  dashboard.rs  device_detail.rs  devices.rs  faults.rs  fleet.rs  login.rs  metrics.rs  mod.rs  ota.rs  register.rs  settings.rs
ferrite-embassy/: Cargo.toml
ferrite-embassy/src/: upload_task.rs
ferrite-ffi/: Cargo.toml  cbindgen.toml
ferrite-ffi/src/: lib.rs
ferrite-gateway/: Cargo.toml
ferrite-gateway/src/: ble_scanner.rs  buffer.rs  config.rs  forwarder.rs  framing.rs  http_ingest.rs  main.rs  usb_reader.rs
ferrite-provision/: Cargo.toml
ferrite-provision/src/: client.rs  export.rs  main.rs  uart.rs
ferrite-rtic/: Cargo.toml
ferrite-rtic/src/: lib.rs
ferrite-sdk/: Cargo.toml  build.rs
ferrite-sdk/src/: compression.rs  config.rs  defmt_sink.rs  device_key.rs  encryption.rs  fault.rs  lib.rs  memory.rs  metrics.rs  ota.rs  reboot_reason.rs  sdk.rs  trace.rs  upload.rs
ferrite-sdk/src/chunks/: decoder.rs  encoder.rs  mod.rs  types.rs
ferrite-sdk/src/transport/: http.rs  lora.rs  mod.rs  traits.rs  uart.rs  usb_cdc.rs
ferrite-server/: Cargo.toml
ferrite-server/src/: alerting.rs  auth.rs  auth_middleware.rs  backup.rs  campaigns.rs  config.rs  crashes.rs  groups.rs  ingest.rs  lib.rs  main.rs  ota.rs  prometheus.rs  rate_limit.rs  report.rs  retention.rs  sse.rs  store.rs  symbolicate.rs
ferrite-server/tests/: integration.rs
iotai-dashboard/: Cargo.toml  Dioxus.toml  index.html
iotai-dashboard/src/: lib.rs
iotai-dashboard/src/api/: client.rs  types.rs
iotai-dashboard/src/auth/: mod.rs  oidc.rs
iotai-sdk/: Cargo.toml
iotai-sdk-embassy/: Cargo.toml
iotai-sdk-embassy/src/: lib.rs  upload_task.rs
iotai-sdk-ffi/: Cargo.toml  cbindgen.toml
iotai-sdk-ffi/src/: lib.rs
iotai-sdk-rtic/: Cargo.toml
iotai-sdk-rtic/src/: lib.rs
iotai-sdk/src/: defmt_sink.rs  fault.rs  lib.rs  memory.rs  metrics.rs  sdk.rs  transport.rs  upload.rs
iotai-sdk/src/chunks/: decoder.rs  mod.rs
iotai-server/: Cargo.toml
iotai-server/src/: ingest.rs  main.rs  store.rs  symbolicate.rs
linker/: README.md  nrf52840-retained.x  rp2040-retained.x  stm32f4-retained.x  stm32l4-retained.x
tests/qemu/: Cargo.toml  device.x  memory.x
tests/qemu/.cargo/: config.toml
tests/qemu/src/: main.rs
tests/qemu/src/tests/: mod.rs  test_chunks.rs  test_metrics.rs  test_reboot_reason.rs  test_trace.rs
tests/qemu/src/transport/: mod.rs  semihosting_transport.rs
(+10 files in other folders)
