[workspace]
resolver = "2"
members = [
  "ferrite-sdk",
  "ferrite-server",
  "ferrite-embassy",
  "ferrite-rtic",
  "ferrite-ffi",
  "ferrite-dashboard",
  "ferrite-provision",
  "ferrite-gateway",
]
exclude = [
  "examples/embassy-nrf52840",
  "examples/embassy-rp2040",
  "examples/embassy-esp32c3",
  "examples/embassy-stm32l4a6",
  "examples/embassy-stm32wl55",
  "examples/embassy-nrf5340",
  "examples/embassy-stm32h563",
  "examples/rtic-stm32f4",
  "examples/rtic-stm32wl55",
  "tests/qemu",
  "ferrite-ble-nrf",
]

[workspace.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
heapless = "0.8"
defmt = "0.3"
embassy-time = "0.3"
embassy-sync = "0.5"
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["heapless"] }
crc = { version = "3", default-features = false }
critical-section = "1.1"
