[package]
name = "ferrite-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferrite"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tabled = "0.17"
base64 = "0.22"
humantime = "2"
chrono = { version = "0.4", features = ["serde"] }
