[package]
name = "ferrite-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "EventSource", "MessageEvent", "Crypto", "SubtleCrypto", "Storage", "Location"] }
gloo-timers = { version = "0.3", features = ["futures"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[profile.release]
opt-level = "s"
lto = true
