[package]
name = "ferrite-sdk"
version = "0.1.0"
edition = "2021"
description = "Embedded Rust firmware observability SDK"
license = "MIT"

[features]
default = []
cortex-m = ["dep:cortex-m", "dep:cortex-m-rt"]
defmt = ["dep:defmt"]
embassy = ["dep:embassy-time", "dep:embassy-sync"]
postcard-encoding = ["dep:postcard", "dep:serde"]
encryption = ["dep:aes", "dep:ccm"]

[dependencies]
heapless = { workspace = true }
crc = { workspace = true }
critical-section = { workspace = true }
cortex-m = { workspace = true, optional = true }
cortex-m-rt = { workspace = true, optional = true, features = ["device"] }
defmt = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
aes = { version = "0.8", optional = true, default-features = false }
ccm = { version = "0.5", optional = true, default-features = false }

[dev-dependencies]
critical-section = { workspace = true, features = ["std"] }
