[package]
name = "ferrite-sdk"
version = "0.1.0"
edition = "2021"
description = "Embedded Rust firmware observability SDK"
license = "MIT"

[features]
default = []
cortex-m = ["dep:cortex-m", "dep:cortex-m-rt"]
defmt = ["dep:defmt"]
embassy = ["dep:embassy-time", "dep:embassy-sync"]
postcard-encoding = ["dep:postcard", "dep:serde"]
encryption = ["dep:aes", "dep:ccm"]
usb-cdc = ["dep:embassy-usb", "embassy"]
http = ["dep:reqwless", "dep:embedded-io-async", "embassy"]
lora = ["dep:embedded-hal"]

[dependencies]
heapless = { workspace = true }
crc = { workspace = true }
critical-section = { workspace = true }
cortex-m = { workspace = true, optional = true }
cortex-m-rt = { workspace = true, optional = true, features = ["device"] }
defmt = { workspace = true, optional = true }
embassy-time = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
aes = { version = "0.8", optional = true, default-features = false }
ccm = { version = "0.5", optional = true, default-features = false }
embassy-usb = { version = "0.3", optional = true, default-features = false }
reqwless = { version = "0.12", optional = true, default-features = false }
embedded-io-async = { version = "0.6", optional = true, default-features = false }
embedded-hal = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
critical-section = { workspace = true, features = ["std"] }
