[package]
name = "ferrite-server"
version = "0.1.0"
edition = "2021"
description = "Companion ingestion server for ferrite-sdk"

[lib]
name = "ferrite_server"
path = "src/lib.rs"

[[bin]]
name = "ferrite-server"
path = "src/main.rs"

[features]
keycloak-tests = []

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
hex = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
jsonwebtoken = "9"
tokio-stream = { version = "0.1", features = ["sync"] }
aes = "0.8"
ccm = "0.5"

[dev-dependencies]
tempfile = "3"
