[package]
name = "embassy-esp32c3-example"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrite-sdk = { path = "../../ferrite-sdk", default-features = false, features = ["embassy", "http"] }
ferrite-embassy = { path = "../../ferrite-embassy", features = ["defmt"] }

esp-hal = { version = "1.0.0-beta.0", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.7", features = ["esp32c3"] }
esp-wifi = { version = "0.13", features = ["esp32c3", "wifi", "embassy-net"] }
esp-backtrace = { version = "0.15", features = ["esp32c3", "panic-handler", "println"] }
esp-println = { version = "0.13", features = ["esp32c3"] }
esp-alloc = "0.7"

embassy-executor = { version = "0.5", features = ["nightly"] }
embassy-time = "0.3"
embassy-net = { version = "0.4", features = ["tcp", "dhcpv4", "dns"] }

embedded-io-async = "0.6"
heapless = "0.8"
static_cell = "2"

[[bin]]
name = "embassy-esp32c3-example"
path = "src/main.rs"

[profile.release]
debug = 2
lto = "fat"
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
