[package]
name = "embassy-esp32c3-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# No embassy feature — we buffer chunks via blocking ChunkTransport.
ferrite-sdk = { path = "../../ferrite-sdk", default-features = false }

# esp-hal 0.23 ecosystem (all use smoltcp 0.12 + embassy-time 0.4)
esp-hal = { version = "0.23", features = ["esp32c3"] }
esp-hal-embassy = { version = "0.6", features = ["esp32c3"] }
esp-wifi = { version = "0.12", features = ["esp32c3", "wifi", "smoltcp"] }
esp-backtrace = { version = "0.15", features = ["esp32c3", "panic-handler", "println"] }
esp-println = { version = "0.13", features = ["esp32c3"] }
esp-alloc = "0.6"

embassy-executor = { version = "0.7", features = ["nightly"] }
embassy-time = "0.4"
embassy-net = { version = "0.6", features = ["tcp", "dhcpv4", "dns"] }

embedded-io-async = "0.6"
heapless = "0.8"
static_cell = "2"

[[bin]]
name = "embassy-esp32c3-example"
path = "src/main.rs"

[profile.release]
debug = 2
lto = "fat"
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
