[package]
name = "embassy-nrf52840-example"
version = "0.1.0"
edition = "2021"

[dependencies]
iotai-sdk = { path = "../../iotai-sdk", features = ["cortex-m", "embassy"] }
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-nrf = { version = "0.1", features = ["nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac"] }
embassy-time = "0.3"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[[bin]]
name = "embassy-nrf52840-example"
path = "src/main.rs"

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
