[package]
name = "embassy-stm32h563-example"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrite-sdk = { path = "../../ferrite-sdk", features = ["cortex-m", "embassy", "http"] }
ferrite-embassy = { path = "../../ferrite-embassy", features = ["defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-stm32 = { version = "0.1", features = ["stm32h563zi", "time-driver-any", "exti", "unstable-pac"] }
embassy-time = "0.3"
embassy-net = { version = "0.4", features = ["tcp", "dhcpv4", "dns"] }
embedded-io-async = "0.6"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"

[[bin]]
name = "embassy-stm32h563-example"
path = "src/main.rs"

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
