[package]
name = "embassy-stm32h563-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# No embassy/http feature — use BufferingTransport like ESP32-C3
ferrite-sdk = { path = "../../ferrite-sdk", features = ["cortex-m"] }

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "task-arena-size-65536"] }
embassy-stm32 = { version = "0.1", features = ["stm32h563zi", "time-driver-any", "exti", "unstable-pac"] }
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
embassy-net = { version = "0.4", features = ["tcp", "dhcpv4"] }
embassy-futures = "0.1"
embedded-io-async = "0.6"
defmt = "0.3"
defmt-rtt = "0.4"
static_cell = "2"
heapless = "0.8"

[[bin]]
name = "embassy-stm32h563-example"
path = "src/main.rs"

[profile.release]
debug = 2
lto = "thin"
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
