[package]
name = "embassy-stm32l4a6-example"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrite-sdk = { path = "../../ferrite-sdk", features = ["cortex-m", "embassy", "usb-cdc"] }
ferrite-embassy = { path = "../../ferrite-embassy", features = ["defmt"] }

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "task-arena-size-65536"] }
embassy-stm32 = { version = "0.1", features = ["stm32l4a6zg", "time-driver-tim2", "exti", "unstable-pac"] }
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
embassy-usb = "0.3"
embassy-futures = "0.1"
defmt = "0.3"
defmt-rtt = "0.4"
# panic-probe removed — causes reset loop without debugger
# panic handler defined in main.rs
static_cell = "2"

[[bin]]
name = "embassy-stm32l4a6-example"
path = "src/main.rs"

[profile.release]
debug = 2
lto = "thin"
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
