[package]
name = "rtic-stm32wl55-example"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrite-sdk = { path = "../../ferrite-sdk", features = ["cortex-m"] }
ferrite-rtic = { path = "../../ferrite-rtic" }
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
stm32wl = { version = "0.15", features = ["stm32wl5x_cm4", "rt"] }
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2", features = ["cortex-m-systick"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[[bin]]
name = "rtic-stm32wl55-example"
path = "src/main.rs"

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
